--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         </li>
     </ul>
 
-    <img src="/img/img-01.jpg" alt="lifestyle">
+    <img src="img/img-01.jpg" alt="lifestyle">
    <p>Lifestyle</p>
    <section>
        <h2>More than just a music festival</h2>
        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus atque voluptas ratione ex non. Totam illum temporibus repudiandae harum culpa quia ullam rerum exercitationem error molestias. Adipisci porro consequuntur, sit veniam suscipit accusantium quos expedita earum commodi ab quibusdam. Dolores recusandae ea nam ut laudantium, inventore voluptates beatae, a aliquam, possimus necessitatibus sapiente minima asperiores ullam enim fugit natus totam aliquid aspernatur. Ipsam eaque veritatis inventore consequatur itaque laborum dolores molestiae minima nemo veniam placeat ad nihil iure minus a, accusantium laboriosam officiis beatae labore? Repudiandae natus laudantium soluta illo omnis, aliquam vero eveniet possimus et. Quod, nisi tenetur! Similique?</p>
    </section>
 
-   <img src="/img/img-02.jpg" alt="lifestyle">
+   <img src="img/img-02.jpg" alt="lifestyle">
    <p>Lifestyle</p>
    <section>
        <h2>Life tastes better with coffee</h2>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rerum, labore repellendus laboriosam, totam facilis ea blanditiis vero voluptas ullam eligendi. Dignissimos quidem impedit architecto recusandae, fugit culpa laudantium consectetur, ratione autem beatae accusantium quaerat cupiditate. Nisi repellendus impedit aliquam. Fugit, fugiat? Sed consequatur soluta necessitatibus! Quae neque tempore ad ea debitis dignissimos laboriosam eveniet voluptatem vel temporibus ipsa molestiae qui repellat sit numquam reprehenderit enim, eius, maiores dolor adipisci id maxime. Minus saepe quis libero? Numquam placeat voluptate aliquid voluptatem cum ipsa ut possimus eaque aliquam officiis. Tempora cum sed itaque harum temporibus, dolorem iure similique optio vitae magnam!</p>
    </section>
 
-    <img src="/img/img-03.jpg" alt="photodiary">
+    <img src="img/img-03.jpg" alt="photodiary">
     <p>Photodiary</p>
     <section>
         <h2>American dream</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem vitae enim architecto dolore obcaecati, laborum modi repellendus repudiandae unde molestias dolores tempora illum pariatur neque commodi, laudantium asperiores praesentium cumque soluta eligendi hic porro similique inventore voluptas? Hic quod distinctio nesciunt ex iure tenetur facere quaerat cum qui. At, officia! Eos, veritatis voluptatem itaque id numquam ex sapiente non labore, cupiditate ducimus natus doloribus. Natus minus sequi iste tenetur optio accusamus voluptatibus error ratione laborum laudantium. Odio totam provident numquam tenetur repudiandae laborum ratione quam? Exercitationem facilis reiciendis eius culpa dolorem expedita repellat, sequi dolore earum vitae laudantium perferendis sint?</p>
     </section>
 
-    <img src="/img/img-04.jpg" alt="photodiary">
+    <img src="img/img-04.jpg" alt="photodiary">
     <p>Photodiary</p>
     <section>
         <h2>A day exploring the Alps</h2>
