--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </li>
     </ul>
 
-    <img src="img/img-01.jpg" alt="lifestyle">
+    <img src="img/img-01.jpg">
    <p>Lifestyle</p>
    <section>
        <h2>More than just a music festival</h2>
