--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
         </li>
     </ul>
 
-    <img src="img/img-01.jpg">
+    <div>
+        <img src="img/img-01.jpg">
    <p>Lifestyle</p>
    <section>
        <h2>More than just a music festival</h2>
        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus atque voluptas ratione ex non. Totam illum temporibus repudiandae harum culpa quia ullam rerum exercitationem error molestias. Adipisci porro consequuntur, sit veniam suscipit accusantium quos expedita earum commodi ab quibusdam. Dolores recusandae ea nam ut laudantium, inventore voluptates beatae, a aliquam, possimus necessitatibus sapiente minima asperiores ullam enim fugit natus totam aliquid aspernatur. Ipsam eaque veritatis inventore consequatur itaque laborum dolores molestiae minima nemo veniam placeat ad nihil iure minus a, accusantium laboriosam officiis beatae labore? Repudiandae natus laudantium soluta illo omnis, aliquam vero eveniet possimus et. Quod, nisi tenetur! Similique?</p>
    </section>
+   </div>
 
    <img src="img/img-02.jpg" alt="lifestyle">
    <p>Lifestyle</p>
