--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </ul>
 
     <div>
-        <img src="img/img-01.jpg">
+        <img src="img/img-01.jpg" alt="girl">
    <p>Lifestyle</p>
    <section>
        <h2>More than just a music festival</h2>
@@ -40,26 +40,32 @@
    </section>
    </div>
 
-   <img src="img/img-02.jpg" alt="lifestyle">
+   <div>
+       <img src="img/img-02.jpg" alt="coffee">
    <p>Lifestyle</p>
    <section>
        <h2>Life tastes better with coffee</h2>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rerum, labore repellendus laboriosam, totam facilis ea blanditiis vero voluptas ullam eligendi. Dignissimos quidem impedit architecto recusandae, fugit culpa laudantium consectetur, ratione autem beatae accusantium quaerat cupiditate. Nisi repellendus impedit aliquam. Fugit, fugiat? Sed consequatur soluta necessitatibus! Quae neque tempore ad ea debitis dignissimos laboriosam eveniet voluptatem vel temporibus ipsa molestiae qui repellat sit numquam reprehenderit enim, eius, maiores dolor adipisci id maxime. Minus saepe quis libero? Numquam placeat voluptate aliquid voluptatem cum ipsa ut possimus eaque aliquam officiis. Tempora cum sed itaque harum temporibus, dolorem iure similique optio vitae magnam!</p>
    </section>
+   </div>
 
-    <img src="img/img-03.jpg" alt="photodiary">
+    <div>
+        <img src="img/img-03.jpg" alt="bridge">
     <p>Photodiary</p>
     <section>
         <h2>American dream</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem vitae enim architecto dolore obcaecati, laborum modi repellendus repudiandae unde molestias dolores tempora illum pariatur neque commodi, laudantium asperiores praesentium cumque soluta eligendi hic porro similique inventore voluptas? Hic quod distinctio nesciunt ex iure tenetur facere quaerat cum qui. At, officia! Eos, veritatis voluptatem itaque id numquam ex sapiente non labore, cupiditate ducimus natus doloribus. Natus minus sequi iste tenetur optio accusamus voluptatibus error ratione laborum laudantium. Odio totam provident numquam tenetur repudiandae laborum ratione quam? Exercitationem facilis reiciendis eius culpa dolorem expedita repellat, sequi dolore earum vitae laudantium perferendis sint?</p>
     </section>
+    </div>
 
-    <img src="img/img-04.jpg" alt="photodiary">
+    <div>
+        <img src="img/img-04.jpg" alt="fog">
     <p>Photodiary</p>
     <section>
         <h2>A day exploring the Alps</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, recusandae nobis! Aut nulla, nostrum numquam dolore omnis doloribus et rerum iste quia tempore necessitatibus ea aliquid voluptates, autem quisquam! Praesentium officia quasi qui. Animi reiciendis quasi non nam soluta beatae sed eligendi distinctio, cumque minima voluptate tenetur, id consequuntur quaerat molestiae sequi sapiente obcaecati voluptatum aspernatur deserunt! Quidem animi inventore provident repellendus ullam at magni dolorum, a voluptatem officia! Temporibus voluptatum earum rem rerum eos obcaecati tenetur quaerat error non consequuntur eum ea harum doloremque, eaque iusto. Quo aut neque, magni, praesentium hic laboriosam cumque atque perferendis officia enim ratione!</p>
     </section>
+    </div>
 
     <input type="button" value="Load More">
     
