--- a/module-04/index.html
+++ b/module-04/index.html
@@ -12,15 +12,17 @@
 
 <body>
     <header class="block-header">
-       <nav class="container">
-           <a href="#" class="logo">mart</a>
+       <nav class="block-nav container clearfix">
+           <a href="#" class="logo">
+            <img src="/img/logo.png" alt="mart" width="78px" height="21px">   
+            </a>
             <ul class="menu clearfix">
-                <li><a href="#"><span>Home</span></a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Page</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li class="menu-li"><a href="#" class="menu-a">Home</a></li>
+                <li class="menu-li"><a href="#" class="menu-a">About Us</a></li class="menu-li">
+                <li class="menu-li"><a href="#" class="menu-a">Page</a></li class="menu-li">
+                <li class="menu-li"><a href="#" class="menu-a">Shop</a></li class="menu-li">
+                <li class="menu-li"><a href="#" class="menu-a">Blog</a></li class="menu-li">
+                <li class="menu-li"><a href="#" class="menu-a">Contact Us</a></li class="menu-li">
             </ul>
        </nav>
     </header>
@@ -29,60 +31,92 @@
         <section class="products">
             <h2>featured products</h2>
             <ul class="products-list clearfix">
-                <li class="product-item clearfix">
-                    <a href="#">
-                    <img class="products-list-img" src="img/product1.jpg" alt="shoes" width="255" height="322">
-                    <p class="products-list-name">blue tshirt</p>
-                    <p class="products-list-price">$26</p>
+                <li class="products-item clearfix">
+                    <a href="#" class="products-link">
+                        <div class="products-list-img-wrp">
+                            <img class="products-list-img" src="img/product1.jpg" alt="shoes">
+                        </div>
+                        <div class="products-list-text-wrp clearfix">
+                            <p class="products-list-price">$26</p>
+                            <p class="products-list-name">blue tshirt</p>
+                        </div>
                     </a>
                 </li>
-                <li class="product-item clearfix">
-                    <a href="#">
-                    <img class="products-list-img" src="img/product2.jpg" alt="belt" width="255" height="322">
-                    <p class="products-list-name">woman shirt</p>
-                    <p class="products-list-price">$31</p>
+                <li class="products-item clearfix">
+                    <a href="#" class="products-link">
+                        <div class="products-list-img-wrp">
+                            <img class="products-list-img" src="img/product2.jpg" alt="belt">
+                        </div>
+                        <div class="products-list-text-wrp clearfix">
+                            <p class="products-list-price">$31</p>
+                            <p class="products-list-name">woman shirt</p>
+                        </div>
                     </a>
                 </li>
-                <li class="product-item clearfix">
-                    <a href="#">
-                    <img class="products-list-img" src="img/product3.jpg" alt="hat" width="255" height="322">
-                    <p class="products-list-name">yellow tshirt</p>
-                    <p class="products-list-price">$21</p>
+                <li class="products-item clearfix">
+                    <a href="#" class="products-link">
+                        <div class="products-list-img-wrp">
+                            <img class="products-list-img" src="img/product3.jpg" alt="hat">
+                        </div>
+                        <div class="products-list-text-wrp clearfix">
+                            <p class="products-list-price">$21</p>
+                            <p class="products-list-name">yellow tshirt</p>
+                        </div>
                     </a>
                 </li>
-                <li class="product-item clearfix">
-                    <a href="#">
-                    <img class="products-list-img" src="img/product4.jpg" alt="bag" width="255" height="322">
-                    <p class="products-list-name">cool lingerie</p>
-                    <p class="products-list-price">$56</p>
+                <li class="products-item clearfix">
+                    <a href="#" class="products-link">
+                        <div class="products-list-img-wrp">
+                            <img class="products-list-img" src="img/product4.jpg" alt="bag">
+                        </div>
+                        <div class="products-list-text-wrp clearfix">
+                            <p class="products-list-price">$56</p>
+                            <p class="products-list-name">cool lingerie</p>
+                        </div>
                     </a>
                 </li>
-                <li class="product-item clearfix">
-                    <a href="#">
-                    <img class="products-list-img" src="img/product5.jpg" alt="purse" width="255" height="322">
-                    <p class="products-list-name">blue tshirt</p>
-                    <p class="products-list-price">$26</p>
+                <li class="products-item clearfix">
+                    <a href="#" class="products-link">
+                        <div class="products-list-img-wrp">
+                            <img class="products-list-img" src="img/product5.jpg" alt="purse">
+                        </div>
+                        <div class="products-list-text-wrp clearfix">
+                            <p class="products-list-price">$26</p>
+                            <p class="products-list-name">blue tshirt</p>
+                        </div>
                     </a>
                 </li>
-                <li class="product-item clearfix">
-                    <a href="#">
-                    <img class="products-list-img" src="img/product6.jpg" alt="belt" width="255" height="322">
-                    <p class="products-list-name">woman shirt</p>
-                    <p class="products-list-price">$31</p>
+                <li class="products-item clearfix">
+                    <a href="#" class="products-link">
+                        <div class="products-list-img-wrp">
+                            <img class="products-list-img" src="img/product6.jpg" alt="belt">
+                        </div>
+                        <div class="products-list-text-wrp clearfix">
+                            <p class="products-list-price">$31</p>
+                            <p class="products-list-name">woman shirt</p>
+                        </div>
                     </a>
                 </li>
-                <li class="product-item clearfix">
-                    <a href="#">
-                    <img class="products-list-img" src="img/product7.jpg" alt="shoes" width="255" height="322">
-                    <p class="products-list-name">yellow tshirt</p>
-                    <p class="products-list-price">$21</p>
+                <li class="products-item clearfix">
+                    <a href="#" class="products-link">
+                        <div class="products-list-img-wrp">
+                            <img class="products-list-img" src="img/product7.jpg" alt="shoes">
+                        </div>
+                        <div class="products-list-text-wrp clearfix">
+                            <p class="products-list-price">$21</p>
+                            <p class="products-list-name">yellow tshirt</p>
+                        </div>
                     </a>
                 </li>
-                <li class="product-item clearfix">
-                    <a href="#">
-                    <img class="products-list-img" src="img/product8.jpg" alt="glasses" width="255" height="322">
-                    <p class="products-list-name">cool lingerie</p>
-                    <p class="products-list-price">$56</p>
+                <li class="products-item clearfix">
+                    <a href="#" class="products-link">
+                        <div class="products-list-img-wrp">
+                            <img class="products-list-img" src="img/product8.jpg" alt="glasses">
+                        </div>
+                        <div class="products-list-text-wrp clearfix">
+                            <p class="products-list-price">$56</p>
+                            <p class="products-list-name">cool lingerie</p>
+                        </div>
                     </a>
                 </li>
             </ul>
@@ -90,20 +124,20 @@
         <section class="news">
             <h2>latest news</h2>
             <ul class="news clearfix">
-                <li class="clearfix">
-                    <img class="news-img" src="img/news01.jpg" alt="shoes" width="350" height="262">
+                <li class="news-li clearfix">
+                    <img class="news-img" src="img/news01.jpg" alt="shoes" height="262">
                     <h3 class="news-about">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                     <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                     <button class="read">Read More</button>
                 </li>
-                <li class="clearfix">
-                    <img class="news-img" src="img/news02.jpg" alt="shoes" width="347" height="261">
+                <li class="news-li clearfix">
+                    <img class="news-img" src="img/news02.jpg" alt="shoes" height="261">
                     <h3 class="news-about">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                     <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                     <button class="read">Read More</button>
                 </li>
-                <li class="clearfix">
-                    <img class="news-img" src="img/news03.jpg" alt="shoes" width="347" height="262">
+                <li class="news-li clearfix">
+                    <img class="news-img" src="img/news03.jpg" alt="shoes" height="262">
                     <h3 class="news-about">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
                     <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                     <button class="read">Read More</button>
