--- a/module-04/index.html
+++ b/module-04/index.html
@@ -14,7 +14,7 @@
     <header class="block-header">
        <nav class="block-nav container clearfix">
            <a href="#" class="logo">
-            <img src="/img/logo.png" alt="mart" width="78px" height="21px">   
+            <img src="./img/logo.png" alt="mart" width="78px" height="21px">   
             </a>
             <ul class="menu clearfix">
                 <li class="menu-li"><a href="#" class="menu-a">Home</a></li>
