--- a/module-04/index.html
+++ b/module-04/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,400,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700%7CRoboto:300,400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>HomeWork-04</title>
 </head>
@@ -14,15 +14,15 @@
     <header class="block-header">
        <nav class="block-nav container clearfix">
            <a href="#" class="logo">
-            <img src="./img/logo.png" alt="mart" width="78px" height="21px">   
+            <img src="./img/logo.png" alt="mart" width="78" height="21">   
             </a>
             <ul class="menu clearfix">
                 <li class="menu-li"><a href="#" class="menu-a">Home</a></li>
-                <li class="menu-li"><a href="#" class="menu-a">About Us</a></li class="menu-li">
-                <li class="menu-li"><a href="#" class="menu-a">Page</a></li class="menu-li">
-                <li class="menu-li"><a href="#" class="menu-a">Shop</a></li class="menu-li">
-                <li class="menu-li"><a href="#" class="menu-a">Blog</a></li class="menu-li">
-                <li class="menu-li"><a href="#" class="menu-a">Contact Us</a></li class="menu-li">
+                <li class="menu-li"><a href="#" class="menu-a">About Us</a></li>
+                <li class="menu-li"><a href="#" class="menu-a">Page</a></li>
+                <li class="menu-li"><a href="#" class="menu-a">Shop</a></li>
+                <li class="menu-li"><a href="#" class="menu-a">Blog</a></li>
+                <li class="menu-li"><a href="#" class="menu-a">Contact Us</a></li>
             </ul>
        </nav>
     </header>
