--- a/module-03/index.html
+++ b/module-03/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Ubuntu:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700%7CUbuntu:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>HomeWork-03</title>
 </head>
@@ -14,10 +14,10 @@
     <header class="block-header">
        <nav class="container">
             <ul class="site-navigation">
-                <li><a href="#"><span>Lifestyle</span></a></li>
-                <li><a href="#">Photodiary</a></li>
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Travel</a></li>
+                <li class="site-navigation-li"><a href="#" class="site-navigation-a">Lifestyle</a></li>
+                <li class="site-navigation-li"><a href="#" class="site-navigation-a">Photodiary</a></li>
+                <li class="site-navigation-li"><a href="#" class="site-navigation-a">Music</a></li>
+                <li class="site-navigation-li"><a href="#" class="site-navigation-a">Travel</a></li>
             </ul>
        </nav>
     </header>
@@ -26,37 +26,37 @@
         <section class="card">
             <ul class="card-list">
                 <li class="card-list-item">
-                    <img class="card-list-img" src="img/image-01.jpg" alt="girl" width="420" height="280">
+                    <img class="card-list-img" src="./img/image-01.jpg" alt="girl">
                     <p class="card-list-life">Lifestyle</p>
                     <h3 class="card-list-name">More than just a music festival</h3>
                     <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                 </li>
                 <li class="card-list-item">
-                    <img class="card-list-img" src="img/image-02.jpg" alt="coffee" width="420" height="280">
+                    <img class="card-list-img" src="./img/image-02.jpg" alt="coffee">
                     <p class="card-list-life">Lifestyle</p>
                     <h3 class="card-list-name">Life tastes better with coffee</h3>
                     <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                 </li>
                 <li class="card-list-item">
-                    <img class="card-list-img" src="img/image-03.jpg" alt="bridge" width="420" height="280">
+                    <img class="card-list-img" src="./img/image-03.jpg" alt="bridge">
                     <p class="card-list-life">Photodiary</p>
                     <h3 class="card-list-name">American dream</h3>
                     <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                 </li>
                 <li class="card-list-item">
-                    <img class="card-list-img" src="img/image-04.jpg" alt="fog" width="420" height="280">
+                    <img class="card-list-img" src="./img/image-04.jpg" alt="fog">
                     <p class="card-list-life">Photodiary</p>
                     <h3 class="card-list-name">A day exploring the Alps</h3>
                     <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                 </li>
                 <li class="card-list-item">
-                    <img class="card-list-img" src="img/image-05.jpg" alt="sand-road" width="420" height="280">
+                    <img class="card-list-img" src="./img/image-05.jpg" alt="sand-road">
                     <p class="card-list-life">Lifestyle</p>
                     <h3 class="card-list-name">Top 10 song for running</h3>
                     <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                 </li>
                 <li class="card-list-item">
-                    <img class="card-list-img" src="img/image-06.jpg" alt="winter-road" width="420" height="280">
+                    <img class="card-list-img" src="./img/image-06.jpg" alt="winter-road">
                     <p class="card-list-life">Lifestyle</p>
                     <h3 class="card-list-name">Cold winter days</h3>
                     <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
