--- a/module-03/index.html
+++ b/module-03/index.html
@@ -11,20 +11,23 @@
 </head>
 
 <body>
-    <header class="block-header">
-       <nav class="container">
+    <header>
+        <div class="block-header">
+            <nav class="container">
             <ul class="site-navigation">
                 <li class="site-navigation-li"><a href="#" class="site-navigation-a">Lifestyle</a></li>
                 <li class="site-navigation-li"><a href="#" class="site-navigation-a">Photodiary</a></li>
                 <li class="site-navigation-li"><a href="#" class="site-navigation-a">Music</a></li>
                 <li class="site-navigation-li"><a href="#" class="site-navigation-a">Travel</a></li>
             </ul>
-       </nav>
+            </nav>
+        </div>
     </header>
 
-    <main class="container">
-        <section class="card">
-            <ul class="card-list">
+    <main>
+        <section>
+            <div class="card container">
+                <ul class="card-list">
                 <li class="card-list-item">
                     <img class="card-list-img" src="./img/image-01.jpg" alt="girl">
                     <p class="card-list-life">Lifestyle</p>
@@ -61,12 +64,15 @@
                     <h3 class="card-list-name">Cold winter days</h3>
                     <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
                 </li>
-            </ul>
+                </ul>
+            </div>
         </section>
     </main>
 
-    <footer class="block-footer container">
-        <button class="load">Load more</button>
+    <footer>
+        <div class="block-footer container">
+            <button class="load">Load more</button>
+        </div>
     </footer>
 
 </body>
