--- a/module-03/index.html
+++ b/module-03/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <div class="block-header">
-            <nav class="container">
+        <div class="container">
+            <nav class="menu">
             <ul class="site-navigation">
                 <li class="site-navigation-li"><a href="#" class="site-navigation-a">Lifestyle</a></li>
                 <li class="site-navigation-li"><a href="#" class="site-navigation-a">Photodiary</a></li>
@@ -26,52 +26,56 @@
 
     <main>
         <section>
-            <div class="card container">
-                <ul class="card-list">
-                <li class="card-list-item">
-                    <img class="card-list-img" src="./img/image-01.jpg" alt="girl">
-                    <p class="card-list-life">Lifestyle</p>
-                    <h3 class="card-list-name">More than just a music festival</h3>
-                    <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-                </li>
-                <li class="card-list-item">
-                    <img class="card-list-img" src="./img/image-02.jpg" alt="coffee">
-                    <p class="card-list-life">Lifestyle</p>
-                    <h3 class="card-list-name">Life tastes better with coffee</h3>
-                    <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-                </li>
-                <li class="card-list-item">
-                    <img class="card-list-img" src="./img/image-03.jpg" alt="bridge">
-                    <p class="card-list-life">Photodiary</p>
-                    <h3 class="card-list-name">American dream</h3>
-                    <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-                </li>
-                <li class="card-list-item">
-                    <img class="card-list-img" src="./img/image-04.jpg" alt="fog">
-                    <p class="card-list-life">Photodiary</p>
-                    <h3 class="card-list-name">A day exploring the Alps</h3>
-                    <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-                </li>
-                <li class="card-list-item">
-                    <img class="card-list-img" src="./img/image-05.jpg" alt="sand-road">
-                    <p class="card-list-life">Lifestyle</p>
-                    <h3 class="card-list-name">Top 10 song for running</h3>
-                    <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-                </li>
-                <li class="card-list-item">
-                    <img class="card-list-img" src="./img/image-06.jpg" alt="winter-road">
-                    <p class="card-list-life">Lifestyle</p>
-                    <h3 class="card-list-name">Cold winter days</h3>
-                    <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-                </li>
-                </ul>
+            <div class="container">
+                <div class="card">
+                    <ul class="card-list">
+                        <li class="card-list-item">
+                            <img class="card-list-img" src="./img/image-01.jpg" alt="girl">
+                            <p class="card-list-life">Lifestyle</p>
+                            <h3 class="card-list-name">More than just a music festival</h3>
+                            <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                        </li>
+                        <li class="card-list-item">
+                              <img class="card-list-img" src="./img/image-02.jpg" alt="coffee">
+                              <p class="card-list-life">Lifestyle</p>
+                               <h3 class="card-list-name">Life tastes better with coffee</h3>
+                               <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                        </li>
+                        <li class="card-list-item">
+                               <img class="card-list-img" src="./img/image-03.jpg" alt="bridge">
+                               <p class="card-list-life">Photodiary</p>
+                               <h3 class="card-list-name">American dream</h3>
+                               <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                        </li>
+                        <li class="card-list-item">
+                                 <img class="card-list-img" src="./img/image-04.jpg" alt="fog">
+                               <p class="card-list-life">Photodiary</p>
+                                <h3 class="card-list-name">A day exploring the Alps</h3>
+                              <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                        </li>
+                        <li class="card-list-item">
+                              <img class="card-list-img" src="./img/image-05.jpg" alt="sand-road">
+                              <p class="card-list-life">Lifestyle</p>
+                              <h3 class="card-list-name">Top 10 song for running</h3>
+                              <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                        </li>
+                        <li class="card-list-item">
+                               <img class="card-list-img" src="./img/image-06.jpg" alt="winter-road">
+                               <p class="card-list-life">Lifestyle</p>
+                               <h3 class="card-list-name">Cold winter days</h3>
+                                <p class="card-list-data">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <div class="block-footer container">
-            <button class="load">Load more</button>
+        <div class="container">
+            <div class="footer">
+                <button class="load">Load more</button>
+            </div>
         </div>
     </footer>
 
