--- a/module-05/index.html
+++ b/module-05/index.html
@@ -34,100 +34,102 @@
 
     <main>
 
-        <section class="container">
-        <div class="slider">
-            <div class="slider-content">
-                <div class="slider-overlay"></div>
-                <button class="slider-ctrl slider-ctrl-prev"></button>
-                <button class="slider-ctrl slider-ctrl-next"></button>
-                <ul class="slides">
-                    <li class="slides-item">
-                        <img class="slides-img" src="./img/slide4.jpg" alt="girls on walk">
-                        <p class="slides-info">AFFORDABLE PARIS TOURS</p>
-                        <p class="slides-tour">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
-                    </li>
-                </ul>
+        <section>
+            <div class="slider">
+                <div class="slider-content">
+                    <div class="slider-overlay"></div>
+                    <button class="slider-ctrl slider-ctrl-prev"></button>
+                    <button class="slider-ctrl slider-ctrl-next"></button>
+                    <ul class="slides">
+                        <li class="slides-item">
+                            <!-- <img class="slides-img" src="./img/slide4.jpg" alt="girls on walk"> -->
+                            <p class="slides-info">AFFORDABLE PARIS TOURS</p>
+                            <p class="slides-tour">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
         </section>
 
-        <section class="container">
-            <div class="products">
-            <h2>new collection</h2>
-            <ul class="products-list clearfix">
-                <li class="products-item clearfix">
-                    <a href="#" class="products-link">
-                        <div class="products-list-img-wrp">
-                            <span class="products-list-img-overlay"></span>
-                            <img class="products-list-img" src="./img/img-01.jpg" alt="blue tshirt">
-                            <ul class="products-list-buttons">
-                                <li class="products-list-buttons-li"><button class="products-list-button1"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button2"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button3"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button4">add to cart</button></li>
-                            </ul>
-                        </div>
-                        <div class="products-list-text-wrp clearfix">
-                            <p class="products-list-price">$26</p>
-                            <p class="products-list-name">blue tshirt</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="products-item clearfix">
-                    <a href="#" class="products-link">
-                        <div class="products-list-img-wrp">
-                            <span class="products-list-img-overlay"></span>
-                            <img class="products-list-img" src="./img/img-02.jpg" alt="woman shirt">
-                            <ul class="products-list-buttons">
-                                <li class="products-list-buttons-li"><button class="products-list-button1"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button2"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button3"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button4">add to cart</button></li>
-                            </ul>
-                        </div>
-                        <div class="products-list-text-wrp clearfix">
-                            <p class="products-list-price">$31</p>
-                            <p class="products-list-name">woman shirt</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="products-item clearfix">
-                    <a href="#" class="products-link">
-                        <div class="products-list-img-wrp">
-                            <span class="products-list-img-overlay"></span>
-                            <img class="products-list-img" src="./img/img-03.jpg" alt="yellow tshirt">
-                            <ul class="products-list-buttons">
-                                <li class="products-list-buttons-li"><button class="products-list-button1"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button2"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button3"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button4">add to cart</button></li>
-                            </ul>
-                        </div>
-                        <div class="products-list-text-wrp clearfix">
-                            <p class="products-list-price">$21</p>
-                            <p class="products-list-name">yellow tshirt</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="products-item clearfix">
-                    <a href="#" class="products-link">
-                        <div class="products-list-img-wrp">
-                            <span class="products-list-img-overlay"></span>
-                            <img class="products-list-img" src="./img/img-04.jpg" alt="cool lingerie">
-                            <ul class="products-list-buttons">
-                                <li class="products-list-buttons-li"><button class="products-list-button1"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button2"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button3"></button></li>
-                                <li class="products-list-buttons-li"><button class="products-list-button4">add to cart</button></li>
-                            </ul>
-                        </div>
-                        <div class="products-list-text-wrp clearfix">
-                            <p class="products-list-price">$56</p>
-                            <p class="products-list-name">cool lingerie</p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
+        <section>
+            <div class="container">
+                <div class="products">
+                    <h2>new collection</h2>
+                    <ul class="products-list clearfix">
+                        <li class="products-item clearfix">
+                            <a href="#" class="products-link">
+                                <div class="products-list-img-wrp">
+                                    <span class="products-list-img-overlay"></span>
+                                    <img class="products-list-img" src="./img/img-01.jpg" alt="blue tshirt">
+                                    <ul class="products-list-buttons">
+                                        <li class="products-list-buttons-li"><button class="products-list-button1"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button2"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button3"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button4">add to cart</button></li>
+                                    </ul>
+                                </div>
+                                <div class="products-list-text-wrp clearfix">
+                                    <p class="products-list-price">$26</p>
+                                    <p class="products-list-name">blue tshirt</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="products-item clearfix">
+                            <a href="#" class="products-link">
+                                <div class="products-list-img-wrp">
+                                    <span class="products-list-img-overlay"></span>
+                                    <img class="products-list-img" src="./img/img-02.jpg" alt="woman shirt">
+                                    <ul class="products-list-buttons">
+                                        <li class="products-list-buttons-li"><button class="products-list-button1"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button2"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button3"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button4">add to cart</button></li>
+                                    </ul>
+                                </div>
+                                <div class="products-list-text-wrp clearfix">
+                                    <p class="products-list-price">$31</p>
+                                    <p class="products-list-name">woman shirt</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="products-item clearfix">
+                            <a href="#" class="products-link">
+                                <div class="products-list-img-wrp">
+                                    <span class="products-list-img-overlay"></span>
+                                    <img class="products-list-img" src="./img/img-03.jpg" alt="yellow tshirt">
+                                    <ul class="products-list-buttons">
+                                        <li class="products-list-buttons-li"><button class="products-list-button1"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button2"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button3"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button4">add to cart</button></li>
+                                    </ul>
+                                </div>
+                                <div class="products-list-text-wrp clearfix">
+                                    <p class="products-list-price">$21</p>
+                                    <p class="products-list-name">yellow tshirt</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="products-item clearfix">
+                            <a href="#" class="products-link">
+                                <div class="products-list-img-wrp">
+                                    <span class="products-list-img-overlay"></span>
+                                    <img class="products-list-img" src="./img/img-04.jpg" alt="cool lingerie">
+                                    <ul class="products-list-buttons">
+                                        <li class="products-list-buttons-li"><button class="products-list-button1"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button2"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button3"></button></li>
+                                        <li class="products-list-buttons-li"><button class="products-list-button4">add to cart</button></li>
+                                    </ul>
+                                </div>
+                                <div class="products-list-text-wrp clearfix">
+                                    <p class="products-list-price">$56</p>
+                                    <p class="products-list-name">cool lingerie</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
 
@@ -136,7 +138,7 @@
     <footer>
         <div class="container">
             <div class="footer">
-                <p class="rights">All Rights Reserved © Dokan | Designed <span class="graf">ThemenGraph</span></p>
+                <p class="rights">All Rights Reserved <span> &copy; </span> Dokan | Designed <span class="graf">ThemenGraph</span></p>
             </div>
         </div>
     </footer>
