--- a/module-06/index.html
+++ b/module-06/index.html
@@ -120,7 +120,7 @@
 
     <footer>
         <div class="footer container">
-            <p class="rights">© 2016 MoGo free PSD template by <span class="graf">Laaqiq</span></p>
+            <p class="rights"><span>&copy;</span> 2016 MoGo free PSD template by <span class="graf">Laaqiq</span></p>
             <form class="subscribe" action="#">
                 <input type="email" name="email" placeholder="Your Email...">
                 <input type="submit" name="subscribe" value="subscribe">
